Prevent overflow in string conversion table.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -442,16 +442,10 @@ footnotes {
     }
 
     th:nth-child(1) {
-        width: 250px;
+        width: 180px;
     }
 }
 
-
-.stringconversion-other {
-    th {
-        background-color: rgb(195, 201, 222);
-    }
-}
 
 
 
